[tool.poetry]
name = "scicon"
version = "0.1.0"
description = "Science Containers for CANFAR"
authors = ["CANFAR <support@canfar.net>"]
license = "GNU Affero GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
