[tool.poetry]
name = "scicon"
version = "0.2.1"
description = "Science Containers for CANFAR"
authors = ["CANFAR <support@canfar.net>"]
license = "GNU Affero GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4"
mkdocstrings-python = "^1.7"
mkdocs-git-revision-date-localized-plugin = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
